@@ -5,6 +5,7 @@ namespace App\Console\Commands;
 use App\Events\SampleEvent;
 use App\Mail\TestMail;
 use App\Smark\Smark;
+use App\Smark\Smark2;
 use Illuminate\Console\Command;
 use Illuminate\Support\Facades\Mail;
 
@@ -31,8 +32,14 @@ class SmarkTest extends Command
     {
         // $this->info(Smark::compute('add', [2,1]));
 
-        broadcast(new SampleEvent);
+        // broadcast(new SampleEvent);
 
-        $this->info('Broadcast Successfully.');
+        $enc = Smark2::encrypter('Haha', 'mysecretkey');
+
+        $this->info('Encrypted: '.$enc);
+
+        $dec = Smark2::decrypter($enc, 'mysecretkey');
+
+        $this->info('Decrypted: '.$dec);
     }
 }
